--- a/src/BlazorDatasheet.Wasm/Shared/NavMenu.razor
+++ b/src/BlazorDatasheet.Wasm/Shared/NavMenu.razor
@@ -11,7 +11,12 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                <span class="oi oi-home" aria-hidden="true"></span> Randome Group
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="pickme">
+                Pick Me Up
             </NavLink>
         </div>
     </nav>
