fix: text for pick me up

--- a/src/BlazorDatasheet.SharedPages/Pages/PickMe.razor
+++ b/src/BlazorDatasheet.SharedPages/Pages/PickMe.razor
@@ -13,7 +13,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="card border-primary mb-3">
-            <div class="card-header bg-primary text-white">랜덤 조 구성을 위한 설정</div>
+            <div class="card-header bg-primary text-white">누가 해볼까?</div>
             <div class="card-body">
                 <div class="form-group row">
                     <label for="number-input" class="col-sm-4 col-form-label">총 사람수</label>
